--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  margin-left: 100px;
+  margin-left: 25px;
   width: 80vw;
   height: 150vh;
 }
@@ -9,7 +9,7 @@
   height: 100px;
 }
 .dasbtn {
-  display: flex;
+  text-align: center;
 }
 
 .dashadd {
@@ -21,7 +21,7 @@
 }
 /* .heading{
 
-}*/
+} */
 .rowperpage {
   margin-top: 20px;
   background-color: white;
