--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
 .dashadd {
   margin-bottom: 1rem;
 }
-.col{
-  margin-block: 0.5rem;
+
+.gridpage{
+  margin-top: 60px;
+  margin-left: 250px;
+}
+.datatable{
+  margin-top: -80px;
 }
