--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,28 @@
 .App {
   text-align: center;
   margin-left: 25px;
-  width: 80vw;
+  width: 90vw;
   height: 100vh;
 }
 /* .das {
   position: absolute;
 } */
-.dasbtn {
+/* .dasbtn {
   text-align: center;
 }
 /* .rowperpage {
 
 } */
-.pagination{
+/* .pagination{
   margin-left: 10px;
 }
 .perpageselect{
-  margin-left: 60px;
-}
+  margin-left: 60px; */
+/* }
 .btnperpage{
   margin-left: 280px;
  
-}
+} */ */
 /* .dashadd {
   margin-bottom: 1rem;
 } */
